MILESTONE 10: Update Docker configuration for MCP deployment - Updated backend Dockerfile for MCP architecture with 3 servers - Added mcp-config.stdio.json volume mounts to docker-compose.multihost.yml - Created docker-compose.mcp.yml override file with MCP environment variables - Added deploy-mcp make target to Makefile - Created deploy-mcp.sh deployment script - Configured HIL and compatible models in Docker environment - All MCP servers run via npx in main container

--- a/docker-compose.multihost.yml
+++ b/docker-compose.multihost.yml
@@ -114,6 +114,7 @@ services:
       
     volumes:
       - app_logs_1:/app/logs
+      - ./mcp-config.stdio.json:/app/mcp-config.stdio.json:ro
     depends_on:
       redis:
         condition: service_healthy
@@ -170,6 +171,7 @@ services:
       
     volumes:
       - app_logs_2:/app/logs
+      - ./mcp-config.stdio.json:/app/mcp-config.stdio.json:ro
     depends_on:
       redis:
         condition: service_healthy
