Fix Docker build issues for multi-host deployment
- Fixed Makefile to use docker-compose.multihost.yml for multi-host builds
- Added build-multihost-ultra-clean and up-multihost targets
- Updated docker-compose.multihost.yml to use mcp-config.multihost.json
- Added MCP_CONFIG_PATH and MCP_ENABLED to backend services
- Fixed clean-build-multi to use correct compose file
- Added clean-docker-cache target for aggressive cache clearing

This ensures changes are properly reflected in Docker builds.

--- a/docker-compose.multihost.yml
+++ b/docker-compose.multihost.yml
@@ -93,7 +93,9 @@ services:
       HOSTNAME: olympian-backend-1
       INSTANCE_ID: backend-1
       ENABLE_COORDINATION: "true"
-      
+      MCP_CONFIG_PATH: /app/mcp-config.multihost.json
+      MCP_ENABLED: "true"
+      MCP_TRANSPORT: "stdio"      
       # Performance Configuration
       CDN_ENABLED: ${CDN_ENABLED:-false}
       CDN_BASE_URL: ${CDN_BASE_URL:-}
@@ -114,7 +116,7 @@ services:
       
     volumes:
       - app_logs_1:/app/logs
-      - ./mcp-config.stdio.json:/app/mcp-config.stdio.json:ro
+      - ./mcp-config.multihost.json:/app/mcp-config.multihost.json:ro
     depends_on:
       redis:
         condition: service_healthy
@@ -150,7 +152,9 @@ services:
       HOSTNAME: olympian-backend-2
       INSTANCE_ID: backend-2
       ENABLE_COORDINATION: "true"
-      
+      MCP_CONFIG_PATH: /app/mcp-config.multihost.json
+      MCP_ENABLED: "true"
+      MCP_TRANSPORT: "stdio"      
       # Performance Configuration
       CDN_ENABLED: ${CDN_ENABLED:-false}
       CDN_BASE_URL: ${CDN_BASE_URL:-}
@@ -171,7 +175,7 @@ services:
       
     volumes:
       - app_logs_2:/app/logs
-      - ./mcp-config.stdio.json:/app/mcp-config.stdio.json:ro
+      - ./mcp-config.multihost.json:/app/mcp-config.multihost.json:ro
     depends_on:
       redis:
         condition: service_healthy
