Fix Redis and MongoDB container issues in multihost deployment
- Remove MongoDB authentication requirement to fix connection issues
- Make context7 MCP server optional when Upstash credentials not provided
- Update MongoDB URIs to use replica set without auth
- Fix Redis configuration for multihost setup
- Update .env with correct connection strings

--- a/docker/mongodb/mongod.conf
+++ b/docker/mongodb/mongod.conf
@@ -58,8 +58,8 @@ systemLog:
 
 # Security settings
 security:
-  authorization: enabled
-  clusterAuthMode: keyFile
+  authorization: disabled
+  # clusterAuthMode: keyFile
   # keyFile: /etc/mongodb/keyfile
 
 # Operation profiling for performance monitoring
