--- a/docker/redis/redis.conf
+++ b/docker/redis/redis.conf
@@ -14,9 +14,9 @@ loglevel notice
 logfile ""
 
 # Snapshotting - Persistence configuration
-save 900 1    # Save if at least 1 key changed in 900 seconds
-save 300 10   # Save if at least 10 keys changed in 300 seconds  
-save 60 10000 # Save if at least 10000 keys changed in 60 seconds
+save 900 1
+save 300 10
+save 60 10000
 
 stop-writes-on-bgsave-error yes
 rdbcompression yes
@@ -90,7 +90,6 @@ stream-node-max-bytes 4096
 stream-node-max-entries 100
 
 # Performance tuning
-tcp-nodelay yes
 tcp-backlog 511
 
 # Module configuration (if using Redis modules)
