--- a/docker/nginx/nginx-multihost.conf
+++ b/docker/nginx/nginx-multihost.conf
@@ -57,8 +57,8 @@ http {
     upstream olympian_backend {
         least_conn;
         
-        server olympian-backend-1:3001 max_fails=3 fail_timeout=30s;
-        server olympian-backend-2:3001 max_fails=3 fail_timeout=30s;
+        server olympian-backend-1:4000 max_fails=3 fail_timeout=30s;
+        server olympian-backend-2:4000 max_fails=3 fail_timeout=30s;
         
         # Health checks (if nginx-plus is available)
         # health_check interval=10s fails=3 passes=2 uri=/api/multihost/health/simple;
@@ -70,16 +70,16 @@ http {
     upstream olympian_websocket {
         ip_hash; # Sticky sessions for WebSocket connections
         
-        server olympian-backend-1:3001;
-        server olympian-backend-2:3001;
+        server olympian-backend-1:4000;
+        server olympian-backend-2:4000;
         
         keepalive 32;
     }
 
     # Health check upstream (for faster health checks)
     upstream olympian_health {
-        server olympian-backend-1:3001;
-        server olympian-backend-2:3001;
+        server olympian-backend-1:4000;
+        server olympian-backend-2:4000;
         
         keepalive 8;
     }
@@ -174,7 +174,7 @@ http {
 
         # Static file serving (if frontend is served by nginx)
         location / {
-            try_files $uri $uri/ /index.html;
+            root /usr/share/nginx/html;            try_files $uri $uri/ /index.html;
             
             # Static file caching
             location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
