--- a/mcp-config.stdio.json
+++ b/mcp-config.stdio.json
@@ -1,30 +1,12 @@
 {
   "mcpServers": {
-    "github": {
+    "context7": {
       "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-github"],
-      "env": {
-        "GITHUB_PERSONAL_ACCESS_TOKEN": "${GITHUB_PERSONAL_ACCESS_TOKEN}"
-      },
-      "timeout": 30000,
-      "retries": 3
+      "args": ["-y", "@upstash/context7-mcp@latest"]
     },
     "applescript": {
       "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-applescript"],
-      "timeout": 30000,
-      "retries": 3
-    },
-    "context7": {
-      "command": "npx",
-      "args": ["-y", "@upstash/context7-mcp"],
-      "env": {
-        "UPSTASH_REDIS_REST_URL": "${UPSTASH_REDIS_REST_URL}",
-        "UPSTASH_REDIS_REST_TOKEN": "${UPSTASH_REDIS_REST_TOKEN}"
-      },
-      "timeout": 30000,
-      "retries": 3
+      "args": ["-y", "@sampullman/applescript-mcp@latest"]
     }
-  },
-  "cacheTtl": 300000
+  }
 }
