--- a/docker-compose.multihost.yml
+++ b/docker-compose.multihost.yml
@@ -122,7 +122,7 @@ services:
       mongodb:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "sleep 5 && "curl", "-f", "http://localhost:3001/api/multihost/health/ping"]
+      test: ["CMD-SHELL", "sleep 5 && curl -f http://localhost:3001/api/multihost/health/ping"]
       interval: 60s
       timeout: 30s
       retries: 10
@@ -181,7 +181,7 @@ services:
       mongodb:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "sleep 5 && "curl", "-f", "http://localhost:3001/api/multihost/health/ping"]
+      test: ["CMD-SHELL", "sleep 5 && curl -f http://localhost:3001/api/multihost/health/ping"]
       interval: 60s
       timeout: 30s
       retries: 10
